--- a/index.html
+++ b/index.html
@@ -530,10 +530,10 @@
         <a class="about floatRight" href="#" id="aboutError"><span class="fui-question-circle"></span></a>
     </div><br/>
     <b>Animation Settings:</b><br/>
-    <span class="floatRight">&Delta; t = <span id="deltaT"></span> seconds</span><br/><br/>
-    <a href="#" id="shouldCenterGeo" class="btn btn-lg btn-default">Re-center geometry</a><br/><br/>
-
-    <br/><br/>
+        <div class="indent">
+            <span class="smallTxt">&Delta; t = <span id="deltaT"></span> seconds</span><br/><br/>
+            <a href="#" id="shouldCenterGeo" class="floatRight btn btn-lg btn-default">Re-center geometry</a>
+        </div>
     <div class="extraSpace"></div>
 </div>
 <div id="svgViewer"></div>
