working on better svg parsing

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             <li class="dropdown navDropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Examples <b class="caret"></b></a>
                 <span class="dropdown-arrow"></span>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu" style="min-width: 200px;">
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Origami<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
