--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
                         <a tabindex="-1">Curved Creases<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" class="demo" data-url="Curved/creaseMesh.txt">Curved Crease 1</a></li>
+                            <li><a href="#" class="demo" data-url="Curved/curvedcrease2.svg">Curved Crease 2</a></li>
                         </ul>
                     </li>
                     <li class="divider"></li>
