change num steps

--- a/index.html
+++ b/index.html
@@ -536,7 +536,8 @@
     </div><br/>
     <b>Animation Settings:</b><br/>
         <div class="indent">
-            <span class="smallTxt">&Delta; t = <span id="deltaT"></span> seconds</span><br/><br/>
+            <span class="smallTxt">&Delta; t = <span id="deltaT"></span> seconds</span><br/>
+            <span class="smallTxt">Num steps per render: &nbsp;&nbsp;<input id="numStepsPerRender" value="" placeholder="" class="int form-control" type="text"></span><br/><br/>
             <a href="#" id="shouldCenterGeo" class="floatRight btn btn-lg btn-default">Re-center geometry</a>
         </div>
     <div class="extraSpace"></div>
