show num of each edge type

--- a/index.html
+++ b/index.html
@@ -586,19 +586,19 @@
                 <div id="edgeVisOptions" class="indent">
                     <label class="checkbox" for="mtnsVisible">
                         <input id="mtnsVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                        Mountains
+                        Mountains <span id="numMtns"></span>
                     </label>
                     <label class="checkbox" for="valleysVisible">
                         <input id="valleysVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                        Valleys
+                        Valleys <span id="numValleys"></span>
                     </label>
                     <label class="checkbox" for="panelsVisible">
                         <input id="panelsVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                        Facet Creases
+                        Facet Creases <span id="numFacets"></span>
                     </label>
                     <label class="checkbox" for="passiveEdgesVisible">
                         <input id="passiveEdgesVisible" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                        Undriven Edges
+                        Undriven Edges <span id="numPassive"></span>
                     </label>
                 </div>
             </div><br/>
