--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
-                <b>Animation Settings</b><br/><br/>
+                <p><b>Animation Settings</b><br/><br/>
                 The dynamic simulation is calculated by moving time forward in small <b>&Delta; t</b> steps, solving the system, and moving the
                 vertices of the origami incrementally.  The time step size for this animation is calculated automatically
                 based on the material stiffnesses set in the <b>Stiffness Settings</b> section: more stiff settings
@@ -736,6 +736,7 @@
                 <b>Num steps per render</b> allows you to control the number of tiny time steps forward to take on each
                 render cycle.  If the simulation looks choppy to you, you might consider lowering this setting.
                 Lowering the number of steps per render will slow down the simulation, but will result in a more smooth animation.
+                </p>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
