--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                 For this to work, you must first use a <a href="https://webvr.info/" target="_blank">WebVR enabled browser</a>:
                 currently only <a href="https://webvr.rocks/firefox" target="_blank">Firefox Nightly</a> is supported by this app.
                 <br/><br/>
-                When you open this page with the appropriate browser and a Vive connected, you will see a button that says "Enter VR".  Clicking this will
+                When you open this page with the appropriate browser and a Vive connected through Steam VR, you will see a button that says "Enter VR".  Clicking this will
                 put the app in an interactive VR mode.  The hand controllers will allow you to grab the origami mesh and pull on it.
                 This is especially cool if you set the mesh material to <b>Axial Strain Visualization</b> so you can see how your interactions
                 change the internal strains in the material.
