--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Curved Creases<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
+                            <li><a href="#" class="demo" data-url="Curved/huffmanTower.svg">Huffman Tower</a></li>
                             <li><a href="#" class="demo" data-url="Curved/creaseMesh.txt">Curved Crease 1</a></li>
                             <li><a href="#" class="demo" data-url="Curved/curvedcrease2.svg">Curved Crease 2</a></li>
                         </ul>
