--- a/index.html
+++ b/index.html
@@ -619,6 +619,13 @@
                 <div id="VRoptions">
 
                 </div>
+            </div><br/>
+            View Angle:<br/>
+            <div class="indent">
+                <a href="#" id="cameraX" class="btn btn-lg btn-default">X</a>
+                <a href="#" id="cameraY" class="btn btn-lg btn-default">Y</a>
+                <a href="#" id="cameraZ" class="btn btn-lg btn-default">Z</a>
+                <a href="#" id="cameraOrtho" class="btn btn-lg btn-default">Ortho</a>
             </div>
         </div>
     </div>
