--- a/index.html
+++ b/index.html
@@ -620,11 +620,14 @@
 
                 </div>
             </div><br/>
-            View Angle:<br/>
+            View Angle:<br/><br/>
             <div class="indent">
-                <a href="#" id="cameraX" class="btn btn-lg btn-default">X</a>
-                <a href="#" id="cameraY" class="btn btn-lg btn-default">Y</a>
-                <a href="#" id="cameraZ" class="btn btn-lg btn-default">Z</a>
+                <a href="#" id="cameraZ" class="paddingBottom btn btn-lg btn-default">Front</a>
+                <a href="#" id="cameraMinusZ" class="paddingBottom btn btn-lg btn-default">Back</a>
+                <a href="#" id="cameraX" class="paddingBottom btn btn-lg btn-default">Right</a>
+                <a href="#" id="cameraMinusX" class="paddingBottom btn btn-lg btn-default">Left</a><br/>
+                <a href="#" id="cameraY" class="btn btn-lg btn-default">Top</a>
+                <a href="#" id="cameraMinusY" class="btn btn-lg btn-default">Bottom</a>
                 <a href="#" id="cameraOrtho" class="btn btn-lg btn-default">Ortho</a>
             </div>
         </div>
